# uuidgen-rs

./: Cargo.toml  README.md
src/: gen.rs  lib.rs
